--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,11 +8,11 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #9e0000;
-  --bg-color-transparent: #9e000086;
-  --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
-  --accent-color: #0011ac;
+  --bg-color: #ffffff;
+  --bg-color-transparent: #b3b3b386;
+  --font-color: #000000;
+  --btn-bg-color: #525252;
+  --accent-color: #293492;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
