--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: #b3b3b386;
   --font-color: #000000;
   --btn-bg-color: #525252;
-  --accent-color: #293492;
+  --accent-color: #af2b2b;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
