--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,7 +11,7 @@
   --bg-color: #ffffff;
   --bg-color-transparent: #b3b3b386;
   --font-color: #000000;
-  --btn-bg-color: #525252;
+  --btn-bg-color: #a1a1a1;
   --accent-color: #af2b2b;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
