--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,20 +1,19 @@
 /* FONTS */
 
-@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Poppins", sans-serif;
-  --font-secondary: "Arvo", serif;
-  --font-code: "Roboto", monospace;
+  --font-primary: "Montserrat", sans-serif;
+  --font-secondary: "Montserrat", serif;
+  --font-code: "Montserrat", monospace;
   --bg-color: #ffffff;
-  --bg-color-transparent: #b3b3b386;
   --font-color: #000000;
-  --btn-bg-color: #c9c9c9;
-  --accent-color: #a34848;
-  --header-shadow: var(--accent-color) 0px 0px 5px;
-  --card-shadow: var(--accent-color) 0px 0px 20px;
+  --btn-bg-color: #fe0000;
+  --accent-color: #ffffff;
+  --header-shadow: var(--accent-color) 0px 0px 0px;
+  --card-shadow: var(--accent-color) 0px 0px 0px;
 }
 
 * {
@@ -45,7 +44,7 @@ body {
 /* HEADER */
 
 header {
-  background-color: var(--accent-color);
+  background-color: var(--bg-color);
   box-shadow: var(--header-shadow);
 }
 
@@ -79,7 +78,7 @@ header .container {
 
 .not-connected h1 {
   text-shadow: 2px 2px 0 var(--accent-color);
-  font-style: italic;
+  font-style: normal;
   margin: 2rem 0;
   font-size: 3.5rem;
 }
@@ -103,15 +102,14 @@ header .container {
   display: inline-block;
   padding: 1rem 2rem;
   background: var(--btn-bg-color);
-  color: var(--accent-color);
-  font-family: var(--font-secondary);
-  font-style: italic;
+  color: var(--bg-color);
+  font-family: var(--);
+  font-style: normal;
   font-weight: bold;
   font-size: 1rem;
   text-align: center;
   text-transform: capitalize;
   transition: all 0.3s ease;
-  box-shadow: var(--header-shadow);
   cursor: pointer;
   position: relative;
   text-decoration: none;
@@ -211,7 +209,7 @@ section {
 
 .countdown h1 {
   text-shadow: 2px 2px 0 var(--accent-color);
-  font-style: italic;
+  font-style: normal;
   margin: 2rem 0;
   font-size: 3.5rem;
   text-align: center;
@@ -251,7 +249,7 @@ section {
   align-items: center;
   padding: 1rem;
   background-color: var(--accent-color);
-  border-radius: 5px;
+  border-radius: 0px;
 }
 
 .mint-qty > span {
